# bank_mgmt_system

./: .gitignore  main.py  pyproject.toml  settings.cfg
bank_mgmt_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/internal/: bank_account_repo.json  bank_repo.json  seed_account_repo.json
docs/: Assignment_3_template.py
gui/: message.py  window.py
src/: config.py  main.py
src/domain/: bank.py  bank_account.py
src/domain/errors/: insufficient_funds_error.py  invalid_amount_error.py
src/domain/exceptions/: insufficient_funds_error.py
src/persistence/: account_repository.py  bank_repository.py  csv_to_json_converter.py  txt_to_json_converter.py
src/routing/: cli_menu.py
src/service/: bank_service.py
tests/: test_domain.py  test_exceptions.py  test_persistence.py
